[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yo-lang"
version = "1.0.0"
description = "A beginner-friendly interpreted programming language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Yogesh" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
]

dependencies = [
    "colorama",
    "flask",
]

[project.urls]
Homepage = "https://github.com/yogeshsince2023/yo-lang"

[project.scripts]
yo = "yo.yo:main"
